@@ -1,4 +1,4 @@
-mshapiro.diag <-
+shapiro.diag <-
 function(x)
 {
     nch <- nchain(x)
@@ -8,5 +8,8 @@ function(x)
     allch <- if (nch * n > vmax) {
         report(window(x, mcp[1] + n - trunc(vmax / nch), mcp[2]), array)
     } else report(x, array)
-    mshapiro.test(t(allch))
+
+    rval <- if (nvar(x) == 1)
+        shapiro.test(allch) else mshapiro.test(t(allch))
+    rval
 }
