@@ -2,6 +2,10 @@ dclone package versions
 
 Version 0.2-2, July 29, 2009
 
+    * One parameter cases added to diagnostic functions
+      lambdamax.diag and shapiro.diag.
+    * Critical values changed.
+
 Version 0.2-1, July 10, 2009
 
     * DC diagnostics and jags.fit.dclone functions
